* remove isArray flag and move arrays into the main type name with a   [] suffix. this is intended to support multidimensional arrays where   the representation as a base type and boolean array value is not   expressive enough.
* change representation of Swift arrays in XSD to be a single element of
  this new string-form array type, rather than as XSD sequences.



git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1538 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/013-foreach-in-proc.xml
+++ b/tests/language/working-base/013-foreach-in-proc.xml
@@ -4,12 +4,12 @@
   <procedure name="echo_batch">
 
       <output 
-    name="fa" type="file" isArray="true"
+    name="fa" type="file[]"
 
      xsi:nil="true" />
 
       <input 
-    name="sa" type="string" isArray="true"
+    name="sa" type="string[]"
 
      xsi:nil="true" />
     <foreach var="s"  indexVar="i">
