--- a/tests/language/working-base/003-string-array-assignment.xml
+++ b/tests/language/working-base/003-string-array-assignment.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="greetings" type="string" isArray="true">
+  <variable name="greetings" type="string[]">
     <array>
       <stringConstant>how</stringConstant><stringConstant>are</stringConstant><stringConstant>you</stringConstant>
     </array>
