--- a/tests/language/working-base/031-var-decl.xml
+++ b/tests/language/working-base/031-var-decl.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="f" type="float" isArray="true">
+  <variable name="f" type="float[]">
     <array>
       <floatConstant>1.0</floatConstant><floatConstant>2.0</floatConstant><floatConstant>3.0</floatConstant>
     </array>
