--- a/tests/language/working-base/03101-var-decl.xml
+++ b/tests/language/working-base/03101-var-decl.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="p" type="int" isArray="true">
+  <variable name="p" type="int[]">
     <range>
       <integerConstant>1</integerConstant>
       <integerConstant>9</integerConstant>
