--- a/tests/language/working-base/0311-var-decl.xml
+++ b/tests/language/working-base/0311-var-decl.xml
@@ -4,12 +4,12 @@
   <variable name="x" type="int" xsi:nil="true"/>
   <variable name="y" type="int"><integerConstant>2</integerConstant></variable>
   <variable name="s" type="String"><stringConstant>hello</stringConstant></variable>
-  <variable name="f" type="float" isArray="true">
+  <variable name="f" type="float[]">
     <array>
       <floatConstant>1.0</floatConstant><floatConstant>2.0</floatConstant><floatConstant>3.0</floatConstant>
     </array>
   </variable>
-  <variable name="p" type="int" isArray="true">
+  <variable name="p" type="int[]">
     <range>
       <integerConstant>1</integerConstant>
       <integerConstant>9</integerConstant>
