--- a/tests/language/working-base/051-nika.xml
+++ b/tests/language/working-base/051-nika.xml
@@ -10,14 +10,14 @@
   </types>
   <procedure name="Pre_antchmbr">
     <output name="t" type="file"/>
-    <input name="f" type="file" isArray="true"/>
+    <input name="f" type="file[]"/>
     <binding>
       <application>
         <executable>pre_ch</executable>
       </application>
     </binding>
   </procedure>
-  <dataset name="files" type="file" isArray="true">
+  <dataset name="files" type="file[]">
     <mapping descriptor="simple_mapper">
       <param name="pattern">&quot;*mol2&quot;</param>
       <param name="location">&quot;/sandbox/ydeng/alamines/&quot;</param>
