--- a/tests/language/working-base/array_wildcard.xml
+++ b/tests/language/working-base/array_wildcard.xml
@@ -16,7 +16,7 @@
      xsi:nil="true" />
 
       <input 
-    name="s" type="string" isArray="true"
+    name="s" type="string[]"
 
      xsi:nil="true" />
     <binding>
@@ -29,7 +29,7 @@
         </arraySubscript>  </application>
     </binding>
   </procedure>
-  <variable name="greetings" type="string" isArray="true">
+  <variable name="greetings" type="string[]">
     <array>
       <stringConstant>how</stringConstant><stringConstant>are</stringConstant><stringConstant>you</stringConstant>
     </array>
