--- a/tests/language/working-base/q22.xml
+++ b/tests/language/working-base/q22.xml
@@ -32,12 +32,12 @@
   </procedure>
   <variable name="inputNames" type="string"><stringConstant>one.txt two.txt three.txt</stringConstant></variable>
   <variable name="outputNames" type="string"><stringConstant>one.count two.count three.count</stringConstant></variable>
-  <dataset name="inputfiles" type="messagefile" isArray="true">
+  <dataset name="inputfiles" type="messagefile[]">
     <mapping descriptor="array_mapper">
       <param name="files"><variableReference>inputNames</variableReference></param>
     </mapping>
   </dataset>
-  <dataset name="outputfiles" type="countfile" isArray="true">
+  <dataset name="outputfiles" type="countfile[]">
     <mapping descriptor="array_mapper">
       <param name="files"><variableReference>outputNames</variableReference></param>
     </mapping>
