--- a/tests/language/working-base/q5.xml
+++ b/tests/language/working-base/q5.xml
@@ -16,7 +16,7 @@
      xsi:nil="true" />
 
       <input 
-    name="s" type="string" isArray="true"
+    name="s" type="string[]"
 
      xsi:nil="true" />
     <binding>
@@ -38,7 +38,7 @@
   <dataset name="outfile" type="messagefile">
     <file name="q5out.txt"/>
   </dataset>
-  <variable name="words" type="string" isArray="true">
+  <variable name="words" type="string[]">
     <array>
       <stringConstant>how</stringConstant><stringConstant>are</stringConstant><stringConstant>you</stringConstant>
     </array>
