--- a/tests/language/working-base/range.xml
+++ b/tests/language/working-base/range.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="nums" type="int" isArray="true">
+  <variable name="nums" type="int[]">
     <range>
       <integerConstant>0</integerConstant>
       <integerConstant>20</integerConstant>
