--- a/tests/language/working-base/struct1.xml
+++ b/tests/language/working-base/struct1.xml
@@ -6,9 +6,7 @@
      <xs:complexType name="foo">
        <xs:sequence>
            <xs:element name="a" type="int"/>
-         <xs:sequence minOccurs="0" maxOccurs="unbounded">
-           <xs:element name="b" type="int"/>
-         </xs:sequence>
+           <xs:element name="b" type="int[]"/>
            <xs:element name="c" type="int"/>
            <xs:element name="d" type="int"/>
        </xs:sequence>
