--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+(01/14/08)
+*** Hmm. Maybe we should use UTC for the timestamps.
+
+*** Overloaded '+' operator to allow string concatenation
+
 (01/15/08)
 *** Multidimensional array handling. Can now declare arrays like this:
        file f[][];
