changed @arg to allow optional arguments
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1598 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+(01/25/08)
+*** @arg now takes a second optional argument which stands for a default
+    value in case the command line argument is missing.
+
 (01/14/08)
 *** Overloaded '+' operator to allow string concatenation
 
