updated list() to reuse data channels
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1871 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-gt2/CHANGES.txt
+++ b/cog/modules/provider-gt2/CHANGES.txt
@@ -1,3 +1,7 @@
+(02/01/2008)
+
+*** Missed some spots on the data channel reuse.
+
 (12/03/2007)
 
 *** Added data channel reuse mode for GridFTP if the server
