better error messages(?)
git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@1874 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-gt4_0_0/CHANGES.txt
+++ b/cog/modules/provider-gt4_0_0/CHANGES.txt
@@ -1,3 +1,10 @@
+(02/06/2008)
+
+*** Slightly better (I believe) error message propagation from
+    GRAM. Unfortunately the exact inner workings of the WS-GRAM
+    fault types don't seem to match any existing model I know of, 
+    so the whole thing is a bit of a guess.
+
 (08/20/2007)
 
 *** Updated to use new redirection stuff
