--- a/modules/provider-gt2/CHANGES.txt
+++ b/modules/provider-gt2/CHANGES.txt
@@ -1,3 +1,7 @@
+(02/11/2008)
+
+*** The last commit broke things (mlst seems picky).
+
 (02/01/2008)
 
 *** Missed some spots on the data channel reuse.
