--- a/src/cog/modules/provider-gt4_0_0/CHANGES.txt
+++ b/src/cog/modules/provider-gt4_0_0/CHANGES.txt
@@ -1,3 +1,7 @@
+(02/11/2008)
+
+*** Updated gram jars to 4.0.6 plus a scalability patch.
+
 (02/06/2008)
 
 *** Slightly better (I believe) error message propagation from
