--- a/cog/modules/karajan/CHANGES.txt
+++ b/cog/modules/karajan/CHANGES.txt
@@ -1,3 +1,7 @@
+(02/22/2008)
+
+*** Added sys:dateFormat(pattern, value)
+
 (02/12/2008)
 
 *** Added the maxSubmissionTime parameter to the score scheduler.
