--- a/src/cog/modules/provider-gt4_0_0/CHANGES.txt
+++ b/src/cog/modules/provider-gt4_0_0/CHANGES.txt
@@ -1,3 +1,8 @@
+(02/25/2008)
+
+*** Updated axis and wsrf jars to fix a scalability problem
+    with notifications.
+
 (02/11/2008)
 
 *** Updated gram jars to 4.0.6 plus a scalability patch.
