Better compile-time checking of variable usage. Use of undeclared variables and multiple assignments to the same variable will now result in a compile-time error (close to the start of a run), rather than an error during execution (which may be many hours later).
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1687 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+(02/26/08)
+*** Better compile-time checking of variable usage. Use of undeclared
+    variables and multiple assignments to the same variable will now result
+    in a compile-time error (close to the start of a run), rather than an
+    error during execution (which may be many hours later).
+
 (01/25/08)
 *** @arg now takes a second optional argument which stands for a default
     value in case the command line argument is missing.
