--- a/tests/language/working-base/005-procedure-invocation.xml
+++ b/tests/language/working-base/005-procedure-invocation.xml
@@ -1,6 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="greetings" type="int" xsi:nil="true"/>
   <call proc="echo">
     <input><variableReference>greetings</variableReference></input>
   </call>
