--- a/tests/language/working-base/006-procedure-invocation-with-assign.xml
+++ b/tests/language/working-base/006-procedure-invocation-with-assign.xml
@@ -1,6 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="greetings" type="int" xsi:nil="true"/>
   <variable name="hw" type="file" xsi:nil="true"/>
   <call proc="echo">
     <output><variableReference>hw</variableReference></output>
