--- a/tests/language/working-base/0061-assignment.xml
+++ b/tests/language/working-base/0061-assignment.xml
@@ -1,6 +1,8 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="s" type="int" xsi:nil="true"/>
+  <variable name="a" type="int" xsi:nil="true"/>
   <call proc="echo">
     <output><variableReference>a</variableReference></output>
     <input><variableReference>s</variableReference></input>
