--- a/tests/language/working-base/010-foreach-array.xml
+++ b/tests/language/working-base/010-foreach-array.xml
@@ -1,6 +1,8 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="fa" type="int[]" xsi:nil="true"/>
+  <variable name="sa" type="int[]" xsi:nil="true"/>
   <foreach var="s"  indexVar="i">
   <in><variableReference>sa</variableReference></in>
   <body><call proc="echo">
