--- a/tests/language/working-base/012-foreach.xml
+++ b/tests/language/working-base/012-foreach.xml
@@ -1,9 +1,11 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="sa" type="int[]" xsi:nil="true"/>
   <foreach var="s" >
   <in><variableReference>sa</variableReference></in>
-  <body><call proc="echo">
+  <body><variable name="a" type="int" xsi:nil="true"/>
+    <call proc="echo">
       <output><variableReference>a</variableReference></output>
       <input><variableReference>s</variableReference></input>
     </call></body>
