--- a/tests/language/working-base/0200001-function-invocation-no-param.xml
+++ b/tests/language/working-base/0200001-function-invocation-no-param.xml
@@ -1,6 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="i" type="int" xsi:nil="true"/>
   <assign>
    <variableReference>i</variableReference>
    <function name="myfunction">
