--- a/tests/language/working-base/021-procedure-invocation-assign-no-param.xml
+++ b/tests/language/working-base/021-procedure-invocation-assign-no-param.xml
@@ -1,6 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="hw1" type="int" xsi:nil="true"/>
   <call proc="echo">
     <output><variableReference>hw1</variableReference></output>
   </call>
