--- a/tests/language/working-base/027-initializer.xml
+++ b/tests/language/working-base/027-initializer.xml
@@ -1,6 +1,8 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="a" type="int" xsi:nil="true"/>
+  <variable name="b" type="int" xsi:nil="true"/>
   <variable name="i" type="int"><arith op="*">
     <arith op="+">
       <variableReference>a</variableReference>
