--- a/tests/language/working-base/033-assign.xml
+++ b/tests/language/working-base/033-assign.xml
@@ -1,14 +1,13 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <assign>
-   <variableReference>i</variableReference>
-   <arith op="*">
-     <arith op="+">
-       <variableReference>a</variableReference>
-       <variableReference>b</variableReference>
-     </arith>
-     <integerConstant>5</integerConstant>
-   </arith>
-  </assign>
+  <variable name="a" type="int" xsi:nil="true"/>
+  <variable name="b" type="int" xsi:nil="true"/>
+  <variable name="i" type="int"><arith op="*">
+    <arith op="+">
+      <variableReference>a</variableReference>
+      <variableReference>b</variableReference>
+    </arith>
+    <integerConstant>5</integerConstant>
+  </arith></variable>
 </program>
