--- a/tests/language/working-base/034-whitespace.xml
+++ b/tests/language/working-base/034-whitespace.xml
@@ -1,14 +1,11 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <assign>
-   <variableReference>i</variableReference>
-   <arith op="*">
-     <arith op="+">
-       <integerConstant>1</integerConstant>
-       <integerConstant>2</integerConstant>
-     </arith>
-     <integerConstant>5</integerConstant>
-   </arith>
-  </assign>
+  <variable name="i" type="int"><arith op="*">
+    <arith op="+">
+      <integerConstant>1</integerConstant>
+      <integerConstant>2</integerConstant>
+    </arith>
+    <integerConstant>5</integerConstant>
+  </arith></variable>
 </program>
