--- a/tests/language/working-base/case2.xml
+++ b/tests/language/working-base/case2.xml
@@ -1,6 +1,8 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="t" type="int"><integerConstant>3</integerConstant></variable>
+  <variable name="j" type="int" xsi:nil="true"/>
   <switch>
     <variableReference>t</variableReference>
     <case>
