--- a/tests/language/working-base/case3.xml
+++ b/tests/language/working-base/case3.xml
@@ -1,6 +1,13 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="d" type="int"><integerConstant>99</integerConstant></variable>
+  <variable name="g" type="int" xsi:nil="true"/>
+  <variable name="j" type="int" xsi:nil="true"/>
+  <variable name="t" type="int" xsi:nil="true"/>
+  <variable name="uuu" type="int" xsi:nil="true"/>
+  <variable name="e" type="int" xsi:nil="true"/>
+  <variable name="s" type="string" xsi:nil="true"/>
   <switch>
     <variableReference>d</variableReference>
     <case>
