--- a/tests/language/working-base/procedurecall-assign-1.xml
+++ b/tests/language/working-base/procedurecall-assign-1.xml
@@ -1,6 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="i" type="int" xsi:nil="true"/>
   <call proc="f">
     <output><variableReference>i</variableReference></output>
     <input><integerConstant>7</integerConstant></input>
