--- a/tests/language/working-base/procedurecall-assign-multireturnvalues.xml
+++ b/tests/language/working-base/procedurecall-assign-multireturnvalues.xml
@@ -1,6 +1,8 @@
 <program xmlns="http://ci.uchicago.edu/swift/2007/07/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
+  <variable name="i" type="int" xsi:nil="true"/>
+  <variable name="j" type="int" xsi:nil="true"/>
   <call proc="f">
     <output><variableReference>i</variableReference></output>
     <output><variableReference>j</variableReference></output>
