more stringent compile time checking of when it is acceptable to assign to a variable within loops - array elements can be assigned to within a loop when the array has been declared outside the loop, but other variables declared outside the loop cannot be assigned to
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@1689 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/tests/language/working-base/046-tibi.xml
+++ b/tests/language/working-base/046-tibi.xml
@@ -66,7 +66,10 @@
         </mapping>
       </dataset>
       <call proc="waveletTransf">
-        <output><variableReference>outputs</variableReference></output>
+        <output><arraySubscript>
+         <variableReference>outputs</variableReference>
+         <variableReference>i</variableReference>
+        </arraySubscript></output>
         <input><variableReference>waveletScript</variableReference></input>
         <input><integerConstant>101</integerConstant></input>
         <input><variableReference>s</variableReference></input>
